[gd_scene load_steps=5 format=3 uid="uid://dygw8m7qpp8hy"]

[ext_resource type="Script" uid="uid://d1o657genxv7l" path="res://Scripts/ganaste.gd" id="1_y31e3"]
[ext_resource type="Texture2D" uid="uid://0830hy8xihq2" path="res://Assets/FONDOS/WIN/FONDO GANAR.png" id="2_y31e3"]
[ext_resource type="Texture2D" uid="uid://bgq4f3mhk64up" path="res://Assets/Cursor.png" id="5_d8078"]
[ext_resource type="Script" uid="uid://cddq21hv1o5y2" path="res://Scripts/cursor.gd" id="6_wbu58"]

[node name="Ganaste" type="Node2D"]
script = ExtResource("1_y31e3")

[node name="Victoria" type="Sprite2D" parent="."]
position = Vector2(576.00006, 328)
scale = Vector2(0.6, 0.596)
texture = ExtResource("2_y31e3")

[node name="Label" type="Label" parent="."]
offset_left = 88.0
offset_top = 168.0
offset_right = 732.0
offset_bottom = 304.0
theme_override_font_sizes/font_size = 50

[node name="Button_Volver" type="Button" parent="."]
offset_left = 1088.0
offset_top = 32.0
offset_right = 1125.0
offset_bottom = 65.0
text = "II"

[node name="Cursor" type="Sprite2D" parent="."]
position = Vector2(1232, 488)
rotation = 0.7295476
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_d8078")
flip_v = true
script = ExtResource("6_wbu58")
stiffness = 20.0

[node name="GanasteLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="TiempoLabel" type="Label" parent="."]
offset_left = 80.0
offset_top = 312.0
offset_right = 243.0
offset_bottom = 362.0
theme_override_font_sizes/font_size = 36
text = "Tiempo --"

[node name="PuntajeLabel" type="Label" parent="."]
offset_left = 72.0
offset_top = 384.0
offset_right = 206.0
offset_bottom = 434.0
theme_override_font_sizes/font_size = 36
text = "Puntaje"

[node name="VidasLabel" type="Label" parent="."]
offset_left = 72.0
offset_top = 464.0
offset_right = 165.0
offset_bottom = 514.0
theme_override_font_sizes/font_size = 36
text = "Vidas"

[node name="FadeRect" type="ColorRect" parent="."]
offset_left = 16.0
offset_top = -104.0
offset_right = 56.0
offset_bottom = -64.0
